--- a/src/style.css
+++ b/src/style.css
@@ -93,3 +93,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+canvas{
+  border-radius: 30px;
+  border: solid;
+  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.5));
+}
